# template-plugin

./: .gitignore  .mcp.json  CLAUDE.md  PLUGIN-FILES.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
plugins/csv-demo/: pyproject.toml
plugins/csv-demo/.claude-plugin/: plugin.json
plugins/csv-demo/src/: server.py
plugins/csv-demo/tests/: conftest.py  test_server.py
plugins/txt-demo/: .mcp.json  pyproject.toml
plugins/txt-demo/.claude-plugin/: plugin.json
plugins/txt-demo/src/: server.py
plugins/txt-skill-demo/.claude-plugin/: plugin.json
plugins/txt-skill-demo/skills/describe-txt/: SKILL.md
plugins/txt-skill-demo/skills/describe-txt/scripts/: describe_txt.py
shared/: operations.py
src/: server.py
tests/: test_server.py
