[project]
name = "csv-demo"
version = "0.1.0"
description = "MCP server for csv-demo plugin"
requires-python = ">=3.8"
dependencies = ["mcp==1.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
